cmake_minimum_required(VERSION 3.26)
project(oop_new)

set(CMAKE_CXX_STANDARD 17)

add_executable(oop_new main.cpp
        DoubleLink.cpp
        DoubleLink.h
        SingleLink.cpp
        SingleLink.h
        Stack.h
        Stack.h
        Queue.h
        Queue.h
        Stack_2.h
        Stack_2.h)
